--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,8 +4,55 @@ html {
 
 body {
   font-family: "Helvetica", sans-serif;
-  color: black;
+  color: #999;
   background-color: white;
   margin: 0px;
   text-align: center;
+
+}
+
+header {
+  height: 64px;
+  width: 100%;
+  position: fixed;
+  z-index: 1;
+  background-color: white;
+  align-items: center;
+  align-content: center;
+}
+
+header h1 {
+  font-size: 1.5rem;
+}
+
+h1, h2, h3, h4 {
+  color: #333;
+  font-weight: bold;
+}
+
+nav {
+  flex-grow: 1;
+  text-align: right;
+}
+
+nav a {
+  color: #333;
+  margin-right: 16px;
+  text-decoration: none;
+}
+
+.alt-h1 {
+  font-weight: lighter;
+  color: #999;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.logo {
+  padding-left: 24px;
+  height:75%;
 }
