--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+/* Generic */
+
 html {
   font-size: 16px;
 }
@@ -8,8 +10,24 @@ body {
   background-color: white;
   margin: 0px;
   text-align: center;
-
 }
+
+h1, h2, h3, h4 {
+  color: #333;
+  font-weight: bold;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.mobile-only {
+  display: none;
+}
+
+/* Header*/
 
 header {
   height: 64px;
@@ -21,13 +39,18 @@ header {
   align-content: center;
 }
 
-header h1 {
+.header-title {
   font-size: 1.5rem;
 }
 
-h1, h2, h3, h4 {
-  color: #333;
-  font-weight: bold;
+.header-title-alt {
+  font-weight: lighter;
+  color: #999;
+}
+
+.header-logo {
+  margin-left: 24px;
+  height:75%;
 }
 
 nav {
@@ -35,24 +58,46 @@ nav {
   text-align: right;
 }
 
+nav ul {
+  list-style-type: none;
+}
+
+nav li {
+  display: inline;
+}
+
 nav a {
-  color: #333;
-  margin-right: 16px;
   text-decoration: none;
+  color: #333;
+  margin-right: 1rem;
 }
 
-.alt-h1 {
-  font-weight: lighter;
-  color: #999;
+@media only screen and (max-width: 480px) {
+
+  /* Mobile */
+
+
 }
 
-.flex-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
+@media only screen and (max-width: 700px) {
 
-.logo {
-  padding-left: 24px;
-  height:75%;
+  /* Custom media query for header as too wide. Set to below tablet default */
+
+  .desktop-only {
+    display: none;
+  }
+
+  .mobile-only {
+    display: inline-block;
+  }
+
+  nav ul {
+    display:flex;
+    padding: 0px;
+  }
+
+  nav li {
+    margin: auto;
+  }
+
 }
