--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,11 @@ html {
 }
 
 body {
-  font-family: "Helvetica", sans-serif;
-  color: #999;
+  font-family: "Roboto", "Helvetica", sans-serif;
+  color: #D3D3D3;
   background-color: white;
   margin: 0px;
-  text-align: center;
+  text-align: left;
 }
 
 h1, h2, h3, h4 {
@@ -17,9 +17,22 @@ h1, h2, h3, h4 {
   font-weight: bold;
 }
 
+ul {
+  list-style-type: none;
+}
+
+li {
+  display: inline;
+}
+
+a {
+  text-decoration: none;
+  margin-right: 1rem;
+  color: #D3D3D3;
+}
+
 .flex-container {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
 }
 
@@ -27,10 +40,19 @@ h1, h2, h3, h4 {
   display: none;
 }
 
+.main-content {
+  position: relative;
+  padding-top: 4rem; /* To offset for fixed header. */
+}
+
 /* Header*/
 
+header.flex-container {
+  justify-content: center;
+}
+
 header {
-  height: 64px;
+  height: 4rem;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -45,11 +67,11 @@ header {
 
 .header-title-alt {
   font-weight: lighter;
-  color: #999;
+  color: #D3D3D3;
 }
 
 .header-logo {
-  margin-left: 24px;
+  margin-left: 1.5rem;
   height:75%;
 }
 
@@ -58,18 +80,80 @@ nav {
   text-align: right;
 }
 
-nav ul {
-  list-style-type: none;
-}
-
-nav li {
-  display: inline;
-}
-
 nav a {
-  text-decoration: none;
   color: #333;
-  margin-right: 1rem;
+}
+
+/* Sections */
+
+.card {
+  display: flex;
+  padding: 2rem 0;
+}
+
+.card h3 {
+  margin: 1rem 0;
+}
+
+.card-img-holder {
+  width: 60%;
+  height: auto;
+  margin: 0 1.5rem;
+}
+
+.card-img-holder img {
+  width: 100%;
+  height: auto;
+}
+
+.card-info-holder {
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  margin-left: 1rem;
+  width: 27rem;
+}
+
+.card-dark {
+  background-color: #D3D3D3;
+}
+
+.button {
+    display: block;
+    background: #4E9CAF;
+    padding: .5rem;
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    margin: 1.5rem 0;
+}
+
+.banner-limit {
+  width: 80%
+}
+
+/* Footer */
+footer {
+  background-color: white;
+  left: 0;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  overflow:hidden;
+  font-size: 0.75rem;
+  align-items: baseline;
+  align-content: baseline;
+  border-top: 1px solid grey;
+  color: #D3D3D3;
+}
+
+footer ul {
+  flex-grow: 1;
+  text-align: right;
+}
+
+.copyright {
+  margin-left: 1.5rem;
 }
 
 @media only screen and (max-width: 480px) {
@@ -83,6 +167,8 @@ nav a {
 
   /* Custom media query for header as too wide. Set to below tablet default */
 
+  /* Generic */
+
   .desktop-only {
     display: none;
   }
@@ -91,13 +177,22 @@ nav a {
     display: inline-block;
   }
 
-  nav ul {
+  ul {
     display:flex;
     padding: 0px;
   }
 
-  nav li {
+  li {
     margin: auto;
   }
 
+  /* Cards */
+  .card-info-holder {
+    width: 100%;
+    margin-right: 1rem;
+  }
+
+  .banner-limit {
+    width: 100%;
+  }
 }
