change colour of button for first card

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -120,7 +120,7 @@ nav a {
 
 .button {
     display: block;
-    background: #4E9CAF;
+    background: #333;
     padding: .5rem;
     text-align: center;
     color: white;
