--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+
 /* Generic */
 
 html {
@@ -91,7 +92,7 @@ nav a {
   display: flex;
 }
 
-.img-container img {
+ .img-container img {
   display: block;
   max-width: 100%;
   overflow: hidden;
@@ -107,14 +108,49 @@ nav a {
 
 /* Cards */
 
-.card {
+.card-stack {
+  display: block;
+}
+
+.card-stack .card {
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  width:100%;
+  height: 10.5rem;
+  min-width: 423px;
+  max-width: 423px;
+}
+
+.card-stack .img-container {
+  max-width: 35%;
+  min-width: 35%;
+  height: auto;
+}
+
+.card-grid {
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
+}
+
+.card-grid .card {
+  display: flex;
+  flex-direction: column;
+  max-width: 30%;
 }
 
 .stack {
   flex-direction: column;
 }
+
+/* Footer */
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
 
 @media only screen and (max-width: 700px) {
 
