pushed images into containers for course grid cards

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,6 +140,12 @@ nav a {
   max-width: 30%;
 }
 
+.card-grid .img {
+  display: block;
+  max-width: 100%;
+
+}
+
 .stack {
   flex-direction: column;
 }
