--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@ nav a {
 
 /* Banner */
 
-#banner .img-container {
+.img-container {
   max-width: 60%;
   min-width: 60%;
   height: auto;
@@ -169,7 +169,7 @@ footer {
   }
 
   .mobile-only {
-    display: inline-block;
+    display: block;
   }
 
   ul {
@@ -182,5 +182,19 @@ footer {
   }
 
   /* Cards */
+
+  .section {
+    flex-direction: column;
+  }
+
+  /* Banner */
+
+  #banner .img-container {
+    max-width: 100%;
+    min-width: 100%;
+    height: 11.25rem;
+    overflow: hidden;
+    justify-content: center;
+  }
 
 }
