--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -143,7 +143,6 @@ nav a {
 .card-grid .img {
   display: block;
   max-width: 100%;
-
 }
 
 .stack {
@@ -203,6 +202,18 @@ footer {
     height: auto;
   }
 
+  #learn {
+    background-color: inherit;
+  }
+  #learn .img-container, #learn p{
+    display: none;
+  }
+
+  #learn .card-grid {
+    display:block;
+    background-color: #D3D3D3;
+  }
+
   /* Banner */
 
   #banner .img-container {
@@ -211,12 +222,6 @@ footer {
     height: 11.25rem;
     overflow: hidden;
     justify-content: center;
-  }
-
-  /* Information */
-
-  #information {
-
   }
 
 }
